Added html structure

--- a/index.html
+++ b/index.html
@@ -10,9 +10,30 @@
     <title>Weather App</title>
   </head>
   <body>
-      <div class ="container">
-    <h1>Hello World</h1>
+    <div class ="container">
+      <div class="weather-app">
+        <div class="row">
+        <div class="weather-today col-lg-6">
+       <h6>Monday 11:30</h6>
+       <h2>Sydney</h2>
+       <h4>Cloudy</h4>
+       <h1>16°C | F</h1>
+       <P>Low 13°C - High 18°C</P>
+       <p>Humidity 13% - Wind 18km/h</p>
+        </div>
+        <div class="weather-future col-lg-6">
+       <ul>
+         <li>Day 1</li>
+         <li>Day 2</li>
+         <li>Day 3</li>
+         <li>Day 4</li>
+         <li>Day 5</li>
+       </ul>
+       </div> <!-- end of future weather div-->
+      </div> <!--end of row-->
+       <small><a href="https://github.com/KC-Morrison/vanilla-weather-app" target="_blank">Open-source code</a> by Katie Morrison</small>
+      </div> <!-- end of weather app div-->
+    </div> <!-- end of container-->
     <script src="src/app.js"></script>
-    </div>
   </body>
 </html>
