--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Montserrat:wght@200;400;500;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="src/style.css" />
   </head>
     <title>Weather App</title>
   </head>
@@ -14,11 +18,11 @@
       <div class="weather-app">
         <div class="row">
         <div class="weather-today col-lg-6">
-       <h6>Monday 11:30</h6>
-       <h2>Sydney</h2>
-       <h4>Cloudy</h4>
-       <h1>16°C | F</h1>
-       <P>Low 13°C - High 18°C</P>
+       <p class = "day-time">Monday 11:30</p>
+       <p class="city-header">Sydney</p>
+       <p class = "weather-description">Cloudy</p>
+       <p> <span class="main-temperature">16</span> <span class="degrees">°C | F</span></p>
+       <P class="temperature-low-high" >Low 13°C - High 18°C</P>
        <p>Humidity 13% - Wind 18km/h</p>
         </div>
         <div class="weather-future col-lg-6">
