--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="row">
         <div class="weather-today col-lg-6">
        <p class = "day-time">Monday 11:30</p>
-       <p class="city-header">Sydney</p>
+       <p class="city-header">San Francisco</p>
        <p class = "weather-description">Cloudy</p>
        <p> <span class="main-temperature">16</span> <span class="degrees">°C | F</span></p>
        <P class="temperature-low-high" >Low 13°C - High 18°C</P>
