--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Montserrat:wght@200;400;500;700&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Montserrat:wght@200;400;500;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
   </head>
     <title>Weather App</title>
@@ -19,11 +19,11 @@
         <div class="row">
         <div class="weather-today col-lg-6">
        <p class = "day-time">Monday 11:30</p>
-       <p class="city-header">San Francisco</p>
-       <p class = "weather-description">Cloudy</p>
-       <p> <span class="main-temperature">16</span> <span class="degrees">°C | F</span></p>
+       <p class="city-header" id="city">San Francisco</p>
+       <p class = "weather-description" id="description">Cloudy</p>
+       <p> <span class="main-temperature" id="temperature">16</span> <span class="degrees">°C | F</span></p>
        <P class="temperature-low-high" >Low 13°C - High 18°C</P>
-       <p>Humidity 13% - Wind 18km/h</p>
+       <p>Humidity <span id="humidity">13</span>% - Wind <span id="wind">18</span>km/h</p>
         </div>
         <div class="weather-future col-lg-6">
        <ul>
