update the time

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="weather-app">
         <div class="row">
         <div class="weather-today col-lg-6">
-       <p class = "day-time">Monday 11:30</p>
+       <p class = "day-time" id="date">Monday 11:30</p>
        <p class="city-header" id="city">San Francisco</p>
        <p class = "weather-description" id="description">Cloudy</p>
        <p> <span class="main-temperature" id="temperature">16</span> <span class="degrees">°C | F</span></p>
