Added weather icon
Added weather icon to the HTML and linked to API weather icons

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="weather-today col-lg-6">
        <p class = "day-time" id="date">Monday 11:30</p>
        <p class="city-header" id="city">San Francisco</p>
+       <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" alt="cloudy weather icon" class="icon" id="icon">
        <p class = "weather-description" id="description">Cloudy</p>
        <p> <span class="main-temperature" id="temperature">16</span> <span class="degrees">°C | F</span></p>
        <P class="temperature-low-high" >Low 13°C - High 18°C</P>
