--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        <p class="city-header" id="city">San Francisco</p>
       
        <p class = "weather-description" id="description">Cloudy</p>
-       <p> <span class="main-temperature" id="temperature">16</span> <span class="degrees">°C | F</span></p>
+       <p> <span class="main-temperature" id="temperature">16</span> <span class="degrees"> <a href="#" id="celsius-link" class="active">°C</a>  | <a href="#" id="fahrenheit-link">°F</a> </span></p>
        <P class="temperature-low-high" >Low 13°C - High 18°C</P>
        <p>Humidity <span id="humidity">13</span>% - Wind <span id="wind">18</span>km/h</p>
         </div>
