--- a/index.html
+++ b/index.html
@@ -1,62 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Montserrat:wght@200;400;500;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="src/style.css" />
-  </head>
-    <title>Weather App</title>
-  </head>
-  <body>
-    <div class ="container">
-      <div class="weather-app">
-<div class="row">
-  <div class="col-sm-12 col-md-6">
-        <form class="search-form" id="search-form">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Montserrat:wght@200;400;500;700&display=swap"
+    rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <link rel="stylesheet" href="src/style.css" />
+</head>
+<title>Weather App</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="weather-app">
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <form class="search-form" id="search-form">
+            <div class="row">
+              <div class="col-8">
+                <input type="search" placeholder="Type a city..." class="form-control shadow-sm" id="city-input"
+                  autocomplete="off">
+              </div>
+              <div class="col-3">
+                <input type="submit" value="Search" class="btn btn-primary shadow-sm">
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="col-sm-12 col-md-6">
           <div class="row">
-            <div class="col-8">
-           <input type="search" placeholder="Type a city..." class="form-control shadow-sm" id="city-input" autocomplete="off">
-           </div>
-           <div class="col-3">
-           <input type="submit" value="Search" class="btn btn-primary shadow-sm">
-           </div>
+            <div class="weather-today ">
+              <p class="day-time" id="date">Monday 11:30</p>
+              <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" alt="cloudy weather icon" class="icon"
+                id="icon">
+              <p class="city-header" id="city">Sydney</p>
+
+              <p class="weather-description" id="description">Cloudy</p>
+              <p> <span class="main-temperature" id="temperature">16</span> <span class="degrees"> <a href="#"
+                    id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link">°F</a> </span></p>
+              <P class="temperature-low-high">Low <span id="low">13</span>°C - High <span id="high">18</span>°C</P>
+              <p>Humidity <span id="humidity">13</span>% - Wind <span id="wind">18</span>km/h</p>
+            </div>
           </div>
-        </form>
-  </div>
-  <div class="col-sm-12 col-md-6">
-        <div class="row">
-        <div class="weather-today ">
-       <p class = "day-time" id="date">Monday 11:30</p>
-        <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" alt="cloudy weather icon" class="icon"id="icon">
-       <p class="city-header" id="city">Sydney</p>
-      
-       <p class = "weather-description" id="description">Cloudy</p>
-       <p> <span class="main-temperature" id="temperature">16</span> <span class="degrees"> <a href="#" id="celsius-link" class="active">°C</a>  | <a href="#" id="fahrenheit-link">°F</a> </span></p>
-       <P class="temperature-low-high">Low <span id="low">13</span>°C - High <span id="high">18</span>°C</P>
-       <p>Humidity <span id="humidity">13</span>% - Wind <span id="wind">18</span>km/h</p>
+
         </div>
       </div>
+      <!--end of row-->
 
-</div>
-        <!--<div class="weather-future col-lg-6">
-       <ul>
-         <li>Day 1</li>
-         <li>Day 2</li>
-         <li>Day 3</li>
-         <li>Day 4</li>
-         <li>Day 5</li>
-       </ul>
-       </div> --> <!-- end of future weather div--> 
-      </div> <!--end of row-->
-       <small class="credits"><a href="https://github.com/KC-Morrison/vanilla-weather-app" target="_blank">Open-source code</a> by Katie Morrison</small>
-      </div> <!-- end of weather app div-->
-    </div> <!-- end of container-->
-    <script src="src/app.js"></script>
-  </body>
+
+      <div class="weather-forecast">
+        <div class="row">
+          <div class="col-2">
+            <div class="weather-forecast-date">Thu</div>
+            <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" />
+            <div class="weather-forecast-tmperatures">
+              <span class="weather-forecast-temperature-min">12°</span>
+              <span class="weather-forecast-temperature-max">18°</span>
+            </div>
+          </div>
+        </div>
+        <!--end of row for weather forecast-->
+      </div> <!-- end of weather-forecast div-->
+
+      <small class="credits"><a href="https://github.com/KC-Morrison/vanilla-weather-app" target="_blank">Open-source
+          code</a> by Katie Morrison</small>
+    </div> <!-- end of weather app div-->
+  </div> <!-- end of container-->
+  <script src="src/app.js"></script>
+</body>
+
 </html>
