--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!--end of row-->
 
 
-      <div class="weather-forecast">
+      <div class="weather-forecast" id="forecast">
         <div class="row">
           <div class="col-2">
             <div class="weather-forecast-date">Thu</div>
