--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   autocomplete="off">
               </div>
               <div class="col-3">
-                <input type="submit" value="Search" class="btn btn-primary shadow-sm">
+                <input type="submit" value="Search" class="btn shadow-sm search-button">
               </div>
             </div>
           </form>
@@ -46,7 +46,7 @@
               <p> <span class="main-temperature" id="temperature">16</span> <span class="degrees"> <a href="#"
                     id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link">°F</a> </span></p>
               <P class="temperature-low-high">Low <span id="low">13</span>°C - High <span id="high">18</span>°C</P>
-              <p>Humidity <span id="humidity">13</span>% - Wind <span id="wind">18</span>km/h</p>
+              <p>Humidity <span id="humidity">13</span>% - Wind <span id="wind">18</span> m/s</p>
             </div>
           </div>
 
@@ -58,11 +58,11 @@
       <div class="weather-forecast" id="forecast">
         <div class="row">
           <div class="col-2">
-            <div class="weather-forecast-date">Thu</div>
-            <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" />
+            <div class="weather-forecast-date"></div>
+            <img class="load-image" src="https://cdn-icons-png.flaticon.com/512/7746/7746162.png" />
             <div class="weather-forecast-tmperatures">
-              <span class="weather-forecast-temperature-min">12°</span>
-              <span class="weather-forecast-temperature-max">18°</span>
+              <span class="weather-forecast-temperature-min"></span>
+              <span class="weather-forecast-temperature-max"></span>
             </div>
           </div>
         </div>
