added current location functionality

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
               <div class="col-3">
                 <input type="submit" value="Search" class="btn shadow-sm search-button">
               </div>
+
+                <div class="col" id="current-location-button">
+                <input type="button" value="Current" class="form-control btn btn-primary shadow-sm"/>
+              </div>
+
+
+
             </div>
           </form>
         </div>
@@ -43,7 +50,7 @@
               <p class="city-header" id="city">Sydney</p>
 
               <p class="weather-description" id="description">Cloudy</p>
-              <p> <span class="main-temperature" id="temperature">16</span> <span class="degrees"> <a href="#"
+              <p> <span class="main-temperature" id="temperature">?</span> <span class="degrees"> <a href="#"
                     id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link">°F</a> </span></p>
               <P class="temperature-low-high">Low <span id="low">13</span>°C - High <span id="high">18</span>°C</P>
               <p>Humidity <span id="humidity">13</span>% - Wind <span id="wind">18</span> m/s</p>
