--- a/index.html
+++ b/index.html
@@ -23,22 +23,21 @@
       <div class="row">
         <div class="col-sm-12 col-md-6">
           <form class="search-form" id="search-form">
+
             <div class="row">
-              <div class="col-8">
+              <div class="col-12 p-0">
                 <input type="search" placeholder="Type a city..." class="form-control shadow-sm" id="city-input"
                   autocomplete="off">
               </div>
-              <div class="col-3">
+              <div class="col-10 p-0">
                 <input type="submit" value="Search" class="btn shadow-sm search-button">
               </div>
 
-                <div class="col" id="current-location-button">
-                <input type="button" value="Current" class="form-control btn btn-primary shadow-sm"/>
+                <div class="col-2 p-0" id="current-location-button">
+                <input type="button" value="📍" class="btn location-button"/>
               </div>
-
-
-
             </div>
+
           </form>
         </div>
         <div class="col-sm-12 col-md-6">
