add link to portfolio site

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div> <!-- end of weather-forecast div-->
 
       <small class="credits"><a href="https://github.com/KC-Morrison/vanilla-weather-app" target="_blank">Open-source
-          code</a> by Katie Morrison</small>
+          code</a> by <a href="https://www.kmorrison.dev" target="_blank">Katie Morrison</a>  </small>
           
     </div> <!-- end of weather app div-->
   </div> <!-- end of container-->
